--- a/qiime-1.5.0-dev/qiime.conf
+++ b/qiime-1.5.0-dev/qiime.conf
@@ -37,7 +37,7 @@ release-file-name: gg_otus_4feb2011.tgz
 release-location: http://greengenes.lbl.gov/Download/Sequence_Data/Fasta_data_files/Caporaso_Reference_OTUs/gg_otus_4feb2011.tgz
 
 [qiime_test_data]
-version: 1.0.0
+version: 1.5.0-dev
 build-type: copy
 repository-local-name: qiime_test_data
 repository-location: git://github.com/qiime-dev/qiime_test_data.git
