Added cython target and updated biom-format target to allow QIIME install to use SparseMat object by default.

--- a/qiime-1.5.0-dev/qiime.conf
+++ b/qiime-1.5.0-dev/qiime.conf
@@ -52,6 +52,14 @@ relative-directory-add-to-path: bin
 #autoconf-make-options: -j4
 autoconf-configure-options: --enable-shared --with-zlib=/usr/include --enable-unicode=ucs2 --enable-unicode=ucs4
 
+[cython]
+version: 0.17
+build-type: python-distutils
+release-file-name: Cython-0.17.tar.gz
+release-location: http://cython.org/release/Cython-0.17.tar.gz
+relative-directory-add-to-path: bin
+deps: python
+
 [qiime]
 version: 1.5.0
 build-type: python-distutils
@@ -270,12 +278,11 @@ deps: pycogent
 
 [biom-format]
 version: 1.0.0
-build-type: copy
+build-type: python-distutils
 release-file-name: biom-format-1.0.0.tgz
 release-location: https://github.com/downloads/biom-format/biom-format/biom-format-1.0.0.tgz
-set-environment-variables-deploypath: PYTHONPATH=python-code/
-relative-directory-add-to-path: scripts/
-deps: python, numpy
+relative-directory-add-to-path: bin
+deps: python, cython, numpy
 
 [rtax]
 version: 0.982
