Pulls from github repo instead of sourceforge.

--- a/qiime-1.5.0-dev/qiime.conf
+++ b/qiime-1.5.0-dev/qiime.conf
@@ -63,10 +63,9 @@ deps: python
 [qiime]
 version: 1.5.0
 build-type: python-distutils
-repository-local-name: Qiime
-repository-location: https://qiime.svn.sourceforge.net/svnroot/qiime/trunk
-repository-type: svn
-repository-options: --trust-server-cert --non-interactive
+repository-local-name: qiime
+repository-location: git://github.com/qiime/qiime.git
+repository-type: git
 relative-directory-add-to-path: bin
 copy-source-to-final-deploy: yes
 deps: pycogent, matplotlib
