QIIME 1.5.0 release is now pulled from GitHub instead of SourceForge. Also updated both conf files to no longer specify --install-data because this is no longer necessary.

--- a/qiime-1.5.0-dev/qiime.conf
+++ b/qiime-1.5.0-dev/qiime.conf
@@ -71,7 +71,7 @@ copy-source-to-final-deploy: yes
 deps: pycogent, matplotlib
 set-environment-variables-deploypath: QIIME=./,PYTHONPATH=lib/
 set-environment-variables-value: QIIME_CONFIG_FP=~/.qiime_config_default
-python-install-options: --install-scripts=bin/ --install-purelib=lib/ --install-data=lib/
+python-install-options: --install-scripts=bin/ --install-purelib=lib/
 
 [MySQL-python]
 version: 1.2.3
