--- a/qiime-1.5.0/qiime.conf
+++ b/qiime-1.5.0/qiime.conf
@@ -49,13 +49,13 @@ autoconf-configure-options: --enable-shared --with-zlib=/usr/include --enable-un
 version: 1.5.0
 build-type: python-distutils
 release-file-name: Qiime-1.5.0.tar.gz
-release-location: http://sourceforge.net/projects/qiime/files/releases/Qiime-1.5.0.tar.gz
+release-location: https://github.com/downloads/qiime/qiime/Qiime-1.5.0.tar.gz
 relative-directory-add-to-path: bin
 copy-source-to-final-deploy: yes
 deps: pycogent, matplotlib
 set-environment-variables-deploypath: QIIME=./,PYTHONPATH=lib/
 set-environment-variables-value: QIIME_CONFIG_FP=~/.qiime_config_default
-python-install-options: --install-scripts=bin/ --install-purelib=lib/ --install-data=lib/
+python-install-options: --install-scripts=bin/ --install-purelib=lib/
 
 [MySQL-python]
 version: 1.2.3
