--- a/qiime-1.5.0-dev/qiime.conf
+++ b/qiime-1.5.0-dev/qiime.conf
@@ -355,3 +355,10 @@ release-file-name: blatSuite.34.zip
 release-location: http://hgwdev.cse.ucsc.edu/~kent/exe/linux/blatSuite.34.zip
 relative-directory-add-to-path: .
 skip-unzipped-name: yes
+
+[sourcetracker]
+version: 0.9.4
+build-type: copy
+release-location: http://sourceforge.net/projects/sourcetracker/files/sourcetracker-0.9.4.tar.gz
+relative-directory-add-to-path: .
+set-environment-variables-deploypath: SOURCETRACKER_PATH=src/SourceTracker.r
