--- a/qiime-1.5.0-dev/qiime.conf
+++ b/qiime-1.5.0-dev/qiime.conf
@@ -69,8 +69,7 @@ repository-type: git
 relative-directory-add-to-path: bin
 copy-source-to-final-deploy: yes
 deps: pycogent, matplotlib
-set-environment-variables-deploypath: QIIME=./,PYTHONPATH=lib/
-set-environment-variables-value: QIIME_CONFIG_FP=~/.qiime_config_default
+set-environment-variables-deploypath: QIIME=./,QIIME_CONFIG_FP=../qiime_config,PYTHONPATH=lib/
 python-install-options: --install-scripts=bin/ --install-purelib=lib/
 
 [MySQL-python]
