--- a/qiime-1.5.0-dev/qiime.conf
+++ b/qiime-1.5.0-dev/qiime.conf
@@ -98,10 +98,10 @@ deps: numpy
 set-environment-variables-deploypath: PYCOGENT=./
 
 [pynast]
-version: 1.1
+version: 1.2
 build-type: python-distutils
-release-file-name: PyNAST-1.1.tgz
-release-location: http://downloads.sourceforge.net/project/pynast/PyNAST%20releases/PyNAST-1.1.tgz
+release-file-name: PyNAST-1.2.tar.gz
+release-location: https://github.com/downloads/qiime/pynast/PyNAST-1.2.tar.gz
 relative-directory-add-to-path: bin
 deps: pycogent
 
