--- a/qiime-1.5.0-dev/qiime.conf
+++ b/qiime-1.5.0-dev/qiime.conf
@@ -365,6 +365,7 @@ skip-unzipped-name: yes
 [sourcetracker]
 version: 0.9.4
 build-type: copy
+release-file-name: sourcetracker-0.9.4.tar.gz
 release-location: http://sourceforge.net/projects/sourcetracker/files/sourcetracker-0.9.4.tar.gz
 relative-directory-add-to-path: .
 set-environment-variables-deploypath: SOURCETRACKER_PATH=src/SourceTracker.r
