Update RTAX to 0.983, which includes an important bug fix.

--- a/qiime-1.5.0/qiime.conf
+++ b/qiime-1.5.0/qiime.conf
@@ -268,10 +268,10 @@ relative-directory-add-to-path: scripts/
 deps: python, numpy
 
 [rtax]
-version: 0.982
+version: 0.983
 build-type: copy
-release-file-name: rtax-0.982.tgz
-release-location: http://dev.davidsoergel.com/trac/rtax/raw-attachment/wiki/Releases/rtax-0.982.tgz
+release-file-name: rtax-0.983.tgz
+release-location: http://static.davidsoergel.com/rtax-0.983.tgz
 relative-directory-add-to-path: .
 
 [ipython]
