--- a/pycogent-1.5.3-dev/pycogent.conf
+++ b/pycogent-1.5.3-dev/pycogent.conf
@@ -170,10 +170,10 @@ autoconf-configure-options: --without-perl
 relative-directory-add-to-path: bin
 
 [rtax]
-version: 0.982
+version: 0.983
 build-type: copy
-release-file-name: rtax-0.982.tgz
-release-location: http://dev.davidsoergel.com/trac/rtax/raw-attachment/wiki/Releases/rtax-0.982.tgz
+release-file-name: rtax-0.983.tgz
+release-location: http://static.davidsoergel.com/rtax-0.983.tgz
 relative-directory-add-to-path: .
 
 [parsinsert]
