Updated for new biom-format 1.1.0 release.

--- a/biom-format-1.1.0-dev/biom-format.conf
+++ b/biom-format-1.1.0-dev/biom-format.conf
@@ -39,14 +39,21 @@ release-location: http://sourceforge.net/projects/numpy/files/NumPy/1.5.1/numpy-
 deps: python
 
 [biom-format]
-version: 1.0.0
-build-type: copy
+version: 1.1.0
+build-type: python-distutils
 repository-local-name: biom-format
 repository-location: git://github.com/biom-format/biom-format.git
 repository-type: git
-deps: python, numpy
-set-environment-variables-deploypath: PYTHONPATH=python-code/
-relative-directory-add-to-path: scripts/
+relative-directory-add-to-path: bin
+deps: python, cython, numpy
+
+[cython]
+version: 0.17
+build-type: python-distutils
+release-file-name: Cython-0.17.tar.gz
+release-location: http://cython.org/release/Cython-0.17.tar.gz
+relative-directory-add-to-path: bin
+deps: python
 
 [setuptools]
 version: 0.6c11
