--- a/qiime-1.5.0-dev/qiime.conf
+++ b/qiime-1.5.0-dev/qiime.conf
@@ -276,10 +276,10 @@ relative-directory-add-to-path: bin
 deps: pycogent
 
 [biom-format]
-version: 1.0.0
+version: 1.1.0
 build-type: python-distutils
-release-file-name: biom-format-1.0.0.tgz
-release-location: https://github.com/downloads/biom-format/biom-format/biom-format-1.0.0.tgz
+release-file-name: biom-format-1.1.0.tgz
+release-location: ftp://thebeast.colorado.edu/pub/biom-format-releases/biom-format-1.1.0.tar.gz
 relative-directory-add-to-path: bin
 deps: python, cython, numpy
 
