--- a/qiime-1.5.0-dev/qiime.conf
+++ b/qiime-1.5.0-dev/qiime.conf
@@ -369,3 +369,11 @@ release-file-name: sourcetracker-0.9.4.tar.gz
 release-location: http://sourceforge.net/projects/sourcetracker/files/sourcetracker-0.9.4.tar.gz
 relative-directory-add-to-path: .
 set-environment-variables-deploypath: SOURCETRACKER_PATH=src/SourceTracker.r
+
+[tax2tree]
+version: 1.0
+build-type: python-distutils
+release-file-name: tax2tree-v1.0.tar.gz
+release-location: https://downloads.sourceforge.net/project/tax2tree/tax2tree-v1.0.tar.gz
+relative-directory-add-to-path: bin
+deps: pycogent
