updated ipython to pull from latest master

--- a/qiime-1.5.0-dev/qiime.conf
+++ b/qiime-1.5.0-dev/qiime.conf
@@ -291,11 +291,12 @@ release-location: http://static.davidsoergel.com/rtax-0.983.tgz
 relative-directory-add-to-path: .
 
 [ipython]
-version: 0.13
+version: latest
 build-type: python-distutils
-release-file-name: ipython-0.13.tar.gz
-release-location: http://archive.ipython.org/release/0.13/ipython-0.13.tar.gz
+repository-local-name: ipython
+repository-location: git://github.com/ipython/ipython.git
 relative-directory-add-to-path: bin
+repository-type: git
 deps: python
 
 [parsinsert]
