--- a/qiime-1.5.0-dev/qiime.conf
+++ b/qiime-1.5.0-dev/qiime.conf
@@ -378,3 +378,10 @@ release-file-name: tax2tree-v1.0.tar.gz
 release-location: https://downloads.sourceforge.net/project/tax2tree/tax2tree-v1.0.tar.gz
 relative-directory-add-to-path: bin
 deps: pycogent
+
+[gdata]
+version: 2.0.17
+build-type: python-distutils
+release-file-name: gdata-2.0.17.tar.gz
+release-location: http://gdata-python-client.googlecode.com/files/gdata-2.0.17.tar.gz
+deps: python
