Updated for biom-format 1.1.1 release.

--- a/biom-format-1.1.1/biom-format.conf
+++ b/biom-format-1.1.1/biom-format.conf
@@ -39,11 +39,10 @@ release-location: http://sourceforge.net/projects/numpy/files/NumPy/1.5.1/numpy-
 deps: python
 
 [biom-format]
-version: 1.1.0
+version: 1.1.1
 build-type: python-distutils
-repository-local-name: biom-format
-repository-location: git://github.com/biom-format/biom-format.git
-repository-type: git
+release-file-name: biom-format-1.1.1.tar.gz
+release-location: ftp://thebeast.colorado.edu/pub/biom-format-releases/biom-format-1.1.1.tar.gz
 relative-directory-add-to-path: bin
 copy-source-to-final-deploy: yes
 deps: python, cython, numpy
