--- a/qiime-1.5.0-dev/qiime.conf
+++ b/qiime-1.5.0-dev/qiime.conf
@@ -31,10 +31,10 @@ local-file: core_set_aligned.fasta.imputed
 remote-file: http://greengenes.lbl.gov/Download/Sequence_Data/Fasta_data_files/core_set_aligned.fasta.imputed
 
 [gg_otus]
-version: 4feb2011
+version: 12_10
 build-type: copy
-release-file-name: gg_otus_4feb2011.tgz
-release-location: http://greengenes.lbl.gov/Download/Sequence_Data/Fasta_data_files/Caporaso_Reference_OTUs/gg_otus_4feb2011.tgz
+release-file-name: gg_12_10_otus.tar.gz
+release-location: ftp://greengenes.microbio.me/greengenes_release/gg_12_10/gg_12_10_otus.tar.gz
 
 [qiime_test_data]
 version: 1.5.0-dev
