Updated from python 2.7.1 to 2.7.3.

--- a/qiime-1.5.0-dev/qiime.conf
+++ b/qiime-1.5.0-dev/qiime.conf
@@ -44,11 +44,11 @@ repository-location: git://github.com/qiime/qiime_test_data.git
 repository-type: git
 
 [python]
-version: 2.7.1
+version: 2.7.3
 build-type: autoconf
-release-file-name: Python-2.7.1.tgz
+release-file-name: Python-2.7.3.tgz
 set-environment-variables-value: ATLAS=None,BLAS=None,LAPACK=None
-release-location: ftp://thebeast.colorado.edu/pub/QIIME-v1.5.0-dependencies/Python-2.7.1.tgz
+release-location: http://www.python.org/ftp/python/2.7.3/Python-2.7.3.tgz
 relative-directory-add-to-path: bin
 #autoconf-make-options: -j4
 autoconf-configure-options: --enable-shared --with-zlib=/usr/include --enable-unicode=ucs2 --enable-unicode=ucs4
