--- a/qiime-1.5.0-dev/qiime.conf
+++ b/qiime-1.5.0-dev/qiime.conf
@@ -51,7 +51,8 @@ set-environment-variables-value: ATLAS=None,BLAS=None,LAPACK=None
 release-location: http://www.python.org/ftp/python/2.7.3/Python-2.7.3.tgz
 relative-directory-add-to-path: bin
 #autoconf-make-options: -j4
-autoconf-configure-options: --enable-shared --with-zlib=/usr/include --enable-unicode=ucs2 --enable-unicode=ucs4
+autoconf-configure-options: --enable-shared --enable-unicode=ucs2 --enable-unicode=ucs4
+set-environment-variables-deploypath: LD_LIBRARY_PATH=lib
 
 [cython]
 version: 0.17
