--- a/pynast-1.2-dev/pynast.conf
+++ b/pynast-1.2-dev/pynast.conf
@@ -23,13 +23,15 @@ append-environment-to-bashrc: yes
 append-environment-to-bashprofile: no
 
 [python]
-version: 2.7.1
+version: 2.7.3
 build-type: autoconf
-release-file-name: Python-2.7.1.tgz
-release-location: ftp://thebeast.colorado.edu/pub/QIIME-v1.5.0-dependencies/Python-2.7.1.tgz
+release-file-name: Python-2.7.3.tgz
+set-environment-variables-value: ATLAS=None,BLAS=None,LAPACK=None
+release-location: http://www.python.org/ftp/python/2.7.3/Python-2.7.3.tgz
 relative-directory-add-to-path: bin
 #autoconf-make-options: -j4
-autoconf-configure-options: --enable-shared --with-zlib=/usr/include --enable-unicode=ucs2 --enable-unicode=ucs4
+autoconf-configure-options: --enable-shared --enable-unicode=ucs2 --enable-unicode=ucs4
+set-environment-variables-deploypath: LD_LIBRARY_PATH=lib
 
 [pycogent]
 version: 1.5.3
