Updated mothur target to use 1.25.0.

--- a/qiime-1.5.0-dev/qiime.conf
+++ b/qiime-1.5.0-dev/qiime.conf
@@ -231,9 +231,8 @@ make-options: -j4
 [mothur]
 version: 1.25.0
 build-type: copy
-release-file-name: Mothur.cen_64.zip
-unzipped-name: mothur
-release-location: http://www.mothur.org/w/images/8/88/Mothur.cen_64.zip
+release-file-name: mothur-1.25.0.tar.gz
+release-location: ftp://thebeast.colorado.edu/pub/QIIME-v1.6.0-dependencies/mothur-1.25.0.tar.gz
 relative-directory-add-to-path: .
 
 [uclust]
