Updated for QIIME 1.6.0 release.

--- a/qiime-1.6.0/qiime.conf
+++ b/qiime-1.6.0/qiime.conf
@@ -37,7 +37,7 @@ release-file-name: gg_12_10_otus.tar.gz
 release-location: ftp://greengenes.microbio.me/greengenes_release/gg_12_10/gg_12_10_otus.tar.gz
 
 [qiime_test_data]
-version: 1.5.0-dev
+version: 1.6.0
 build-type: copy
 repository-local-name: qiime_test_data
 repository-location: git://github.com/qiime/qiime_test_data.git
@@ -63,11 +63,10 @@ relative-directory-add-to-path: bin
 deps: python
 
 [qiime]
-version: 1.5.0
+version: 1.6.0
 build-type: python-distutils
-repository-local-name: qiime
-repository-location: git://github.com/qiime/qiime.git
-repository-type: git
+release-file-name: qiime-1.6.0.tar.gz
+release-location: ftp://thebeast.colorado.edu/pub/qiime-releases/qiime-1.6.0.tar.gz
 relative-directory-add-to-path: bin
 copy-source-to-final-deploy: yes
 deps: pycogent, matplotlib
