Updated pycogent target to pull from github.

--- a/pycogent-1.5.3-dev/pycogent.conf
+++ b/pycogent-1.5.3-dev/pycogent.conf
@@ -50,10 +50,9 @@ deps: python
 [pycogent]
 version: 1.5.3
 build-type: python-distutils
-repository-local-name: PyCogent
-repository-location: https://pycogent.svn.sourceforge.net/svnroot/pycogent/trunk
-repository-type: svn
-repository-options: --trust-server-cert --non-interactive
+repository-local-name: pycogent
+repository-location: https://github.com/pycogent/pycogent.git
+repository-type: git
 copy-source-to-final-deploy: yes
 deps: numpy
 set-environment-variables-value: TEST_DB=1
