Added new biom-format 1.1.2 release.

--- a/qiime-1.6.0-dev/qiime.conf
+++ b/qiime-1.6.0-dev/qiime.conf
@@ -276,10 +276,10 @@ relative-directory-add-to-path: bin
 deps: pycogent
 
 [biom-format]
-version: 1.1.1
+version: 1.1.2
 build-type: python-distutils
-release-file-name: biom-format-1.1.1.tgz
-release-location: ftp://thebeast.colorado.edu/pub/biom-format-releases/biom-format-1.1.1.tar.gz
+release-file-name: biom-format-1.1.2.tar.gz
+release-location: ftp://thebeast.colorado.edu/pub/biom-format-releases/biom-format-1.1.2.tar.gz
 relative-directory-add-to-path: bin
 deps: python, cython, numpy
 
