Updated R targets to use r-package build-type.

--- a/picrust-0.9.0-dev/picrust.conf
+++ b/picrust-0.9.0-dev/picrust.conf
@@ -78,8 +78,15 @@ set-environment-variables-deploypath: PYCOGENT=./
 
 [r]
 version: 2.12.0
-build-type: custom
+build-type: autoconf
 release-file-name: R-2.12.0.tar.gz
 release-location: http://cran.case.edu/src/base/R-2/R-2.12.0.tar.gz
 relative-directory-add-to-path: bin
 autoconf-make-options: -j4
+
+[ape]
+version: latest
+build-type: r-package
+r-package-name: ape
+r-package-repo: http://cran.r-project.org
+deps: r
