--- a/qiime-1.5.0/qiime.conf
+++ b/qiime-1.5.0/qiime.conf
@@ -227,11 +227,67 @@ relative-directory-add-to-path: .
 
 [r]
 version: 2.12.0
-build-type: custom
+build-type: autoconf
 release-file-name: R-2.12.0.tar.gz
 release-location: http://cran.case.edu/src/base/R-2/R-2.12.0.tar.gz
 relative-directory-add-to-path: bin
 autoconf-make-options: -j4
+
+[random-forest]
+version: latest
+build-type: r-package
+r-package-name: randomForest
+r-package-repo: http://cran.r-project.org
+deps: r
+
+[optparse]
+version: latest
+build-type: r-package
+r-package-name: optparse
+r-package-repo: http://cran.r-project.org
+deps: r
+
+[vegan]
+version: latest
+build-type: r-package
+r-package-name: vegan
+r-package-repo: http://cran.r-project.org
+deps: r
+
+[ape]
+version: latest
+build-type: r-package
+r-package-name: ape
+r-package-repo: http://cran.r-project.org
+deps: r
+
+[mass]
+version: latest
+build-type: r-package
+r-package-name: MASS
+r-package-repo: http://cran.r-project.org
+deps: r
+
+[gtools]
+version: latest
+build-type: r-package
+r-package-name: gtools
+r-package-repo: http://cran.r-project.org
+deps: r
+
+[klar]
+version: latest
+build-type: r-package
+r-package-name: klaR
+r-package-repo: http://cran.r-project.org
+deps: r
+
+[r-color-brewer]
+version: latest
+build-type: r-package
+r-package-name: RColorBrewer
+r-package-repo: http://cran.r-project.org
+deps: r
 
 [ampliconnoise]
 version: 1.25
