modified env variable that gets set

--- a/qiime-1.6.0-dev/qiime.conf
+++ b/qiime-1.6.0-dev/qiime.conf
@@ -411,7 +411,7 @@ build-type: copy
 release-file-name: sourcetracker-0.9.5.tar.gz
 release-location: http://sourceforge.net/projects/sourcetracker/files/sourcetracker-0.9.5.tar.gz
 relative-directory-add-to-path: .
-set-environment-variables-deploypath: SOURCETRACKER_PATH=src/SourceTracker.r
+set-environment-variables-deploypath: SOURCETRACKER_PATH=.
 
 [tax2tree]
 version: 1.0
