Updated qiime-1.6.0-dev/qiime.conf and picrust-0.9.0-dev/picrust.conf to install R 2.12.2

--- a/picrust-0.9.0-dev/picrust.conf
+++ b/picrust-0.9.0-dev/picrust.conf
@@ -77,11 +77,12 @@ deps: numpy
 set-environment-variables-deploypath: PYCOGENT=./
 
 [r]
-version: 2.12.0
+version: 2.12.2
 build-type: autoconf
-release-file-name: R-2.12.0.tar.gz
-release-location: http://cran.case.edu/src/base/R-2/R-2.12.0.tar.gz
+release-file-name: R-2.12.2.tar.gz
+release-location: http://cran.cnr.berkeley.edu/src/base/R-2/R-2.12.2.tar.gz
 relative-directory-add-to-path: bin
+autoconf-configure-options: --with-x=no
 autoconf-make-options: -j4
 
 [ape]
