--- a/qiime-1.6.0-dev/qiime.conf
+++ b/qiime-1.6.0-dev/qiime.conf
@@ -236,11 +236,12 @@ release-location: http://drive5.com/uclust/uclustq1.2.22_i86linux64
 relative-directory-add-to-path: .
 
 [r]
-version: 2.12.0
+version: 2.12.2
 build-type: autoconf
-release-file-name: R-2.12.0.tar.gz
-release-location: http://cran.case.edu/src/base/R-2/R-2.12.0.tar.gz
+release-file-name: R-2.12.2.tar.gz
+release-location: http://cran.cnr.berkeley.edu/src/base/R-2/R-2.12.2.tar.gz
 relative-directory-add-to-path: bin
+autoconf-configure-options: --with-x=no
 autoconf-make-options: -j4
 
 [random-forest]
