Add emperor to the dependencies list
Add the emperor git repository so people can start using it right away
when they install QIIME.

--- a/qiime-1.6.0-dev/qiime.conf
+++ b/qiime-1.6.0-dev/qiime.conf
@@ -427,3 +427,14 @@ build-type: python-distutils
 release-file-name: gdata-2.0.17.tar.gz
 release-location: http://gdata-python-client.googlecode.com/files/gdata-2.0.17.tar.gz
 deps: python
+
+[emperor]
+version: 0.0.0
+build-type: python-distutils
+repository-local-name: emperor
+repository-location: git://github.com/qiime/emperor.git
+repository-type: git
+relative-directory-add-to-path: bin
+deps: pycogent, numpy, qiime
+set-environment-variables-deploypath: PYTHONPATH=lib/
+python-install-options: --install-scripts=bin/ --install-purelib=lib/
