Adding galaxy and qiime-galaxy

--- a/qiime-1.6.0-dev/qiime.conf
+++ b/qiime-1.6.0-dev/qiime.conf
@@ -438,3 +438,20 @@ relative-directory-add-to-path: bin
 deps: pycogent, numpy, qiime
 set-environment-variables-deploypath: PYTHONPATH=lib/
 python-install-options: --install-scripts=bin/ --install-purelib=lib/
+
+[qiime-galaxy]
+version: 0.0.1
+build-type: copy
+repository-local-name: qiime-galaxy
+repository-location: git://github.com/qiime/qiime-galaxy.git
+repository-type: git
+relative-directory-add-to-path: scripts
+deps: python, qiime
+set-environment-variables-deploypath: PYTHONPATH=lib/
+
+[galaxy]
+version: latest
+build-type: copy
+release-file-name: galaxy-dist
+release-location: https://bitbucket.org/galaxy/galaxy-dist/get/tip.tar.gz
+deps: python, qiime, qiime-galaxy
