Fixing Galaxy release-file-name

--- a/qiime-1.6.0-dev/qiime.conf
+++ b/qiime-1.6.0-dev/qiime.conf
@@ -452,6 +452,6 @@ set-environment-variables-deploypath: PYTHONPATH=lib/
 [galaxy]
 version: latest
 build-type: copy
-release-file-name: galaxy-dist
+release-file-name: tip.tar.gz
 release-location: https://bitbucket.org/galaxy/galaxy-dist/get/tip.tar.gz
 deps: python, qiime, qiime-galaxy
