Fixing Galaxy version

--- a/qiime-1.6.0-dev/qiime.conf
+++ b/qiime-1.6.0-dev/qiime.conf
@@ -450,8 +450,8 @@ deps: python, qiime
 set-environment-variables-deploypath: PYTHONPATH=lib/
 
 [galaxy]
-version: latest
+version: release_2013.01.13
 build-type: copy
-release-file-name: tip.tar.gz
-release-location: https://bitbucket.org/galaxy/galaxy-dist/get/tip.tar.gz
+release-file-name: release_2013.01.13.tar.gz
+release-location: https://bitbucket.org/galaxy/galaxy-dist/get/release_2013.01.13.tar.gz
 deps: python, qiime, qiime-galaxy
