Fixing Galaxy installation

--- a/qiime-1.6.0-dev/qiime.conf
+++ b/qiime-1.6.0-dev/qiime.conf
@@ -452,6 +452,6 @@ set-environment-variables-deploypath: PYTHONPATH=lib/
 [galaxy]
 version: release_2013.01.13
 build-type: copy
-release-file-name: release_2013.01.13.tar.gz
+release-file-name: galaxy-galaxy-dist-a4113cc1cb5e.tar.gz
 release-location: https://bitbucket.org/galaxy/galaxy-dist/get/release_2013.01.13.tar.gz
 deps: python, qiime, qiime-galaxy
