Added conf files for QIIME 1.7.0 and 1.7.0-dev

--- a/qiime-1.7.0/qiime.conf
+++ b/qiime-1.7.0/qiime.conf
@@ -56,11 +56,10 @@ relative-directory-add-to-path: bin
 deps: python
 
 [qiime]
-version: 1.6.0
+version: 1.7.0
 build-type: python-distutils
-repository-local-name: qiime
-repository-location: git://github.com/qiime/qiime.git
-repository-type: git
+release-file-name: qiime-1.7.0.tar.gz
+release-location: ftp://thebeast.colorado.edu/pub/qiime-releases/qiime-1.7.0.tar.gz
 relative-directory-add-to-path: bin
 copy-source-to-final-deploy: yes
 deps: pycogent, matplotlib
