Changed pyzmq version to work with latest IPython.

--- a/qiime-1.7.0-dev/qiime.conf
+++ b/qiime-1.7.0-dev/qiime.conf
@@ -367,10 +367,10 @@ relative-directory-add-to-path: bin
 deps: python
 
 [pyzmq]
-version: 2.1.9
+version: 2.1.11
 build-type: python-distutils
-release-file-name: pyzmq-2.1.9.tar.gz
-release-location: http://pypi.python.org/packages/source/p/pyzmq/pyzmq-2.1.9.tar.gz#md5=44efd9e7dd041b9f779e3026d189f870
+release-file-name: pyzmq-2.1.11.tar.gz
+release-location: http://pypi.python.org/packages/source/p/pyzmq/pyzmq-2.1.11.tar.gz
 relative-directory-add-to-path: bin
 deps: python
 
