Added support for the R biom-format package.
These changes are necessary for the CI system to test this part of the biom-format project.

--- a/biom-format-1.1.2-dev/biom-format.conf
+++ b/biom-format-1.1.2-dev/biom-format.conf
@@ -58,9 +58,46 @@ release-location: http://cython.org/release/Cython-0.17.tar.gz
 relative-directory-add-to-path: bin
 deps: python
 
-[setuptools]
-version: 0.6c11
-build-type: python-distutils
-release-file-name: setuptools-0.6c11.tar.gz
-release-location: http://pypi.python.org/packages/source/s/setuptools/setuptools-0.6c11.tar.gz
-deps: python
+[r]
+version: 3.0.0
+build-type: autoconf
+release-file-name: R-3.0.0.tar.gz
+release-location: http://cran.case.edu/src/base/R-3/R-3.0.0.tar.gz
+relative-directory-add-to-path: bin
+autoconf-configure-options: --with-x=no
+autoconf-make-options: -j4
+
+[plyr]
+version: latest
+build-type: r-package
+r-package-name: plyr
+r-package-repo: http://cran.r-project.org
+deps: r
+
+[rjsonio]
+version: latest
+build-type: r-package
+r-package-name: RJSONIO
+r-package-repo: http://cran.r-project.org
+deps: r
+
+[testthat]
+version: latest
+build-type: r-package
+r-package-name: testthat
+r-package-repo: http://cran.r-project.org
+deps: r
+
+[knitr]
+version: latest
+build-type: r-package
+r-package-name: knitr
+r-package-repo: http://cran.r-project.org
+deps: r
+
+[foreach]
+version: latest
+build-type: r-package
+r-package-name: foreach
+r-package-repo: http://cran.r-project.org
+deps: r
