--- a/qiime-1.7.0-dev/qiime.conf
+++ b/qiime-1.7.0-dev/qiime.conf
@@ -378,7 +378,7 @@ deps: python
 version: 1.1
 build-type: copy
 release-file-name: pplacer-v1.1-Linux.tar.gz
-unzipped-name: pplacer-v1.1.alpha13r2-Linux-2.6.32
+unzipped-name: pplacer-v1.1.alpha14-Linux-3.2.0
 release-location: http://matsen.fhcrc.org/pplacer/builds/pplacer-v1.1-Linux.tar.gz
 relative-directory-add-to-path: .
 
