added qcli dependency

--- a/qiime-1.7.0-dev/qiime.conf
+++ b/qiime-1.7.0-dev/qiime.conf
@@ -455,3 +455,10 @@ build-type: copy
 release-file-name: galaxy-galaxy-dist-a4113cc1cb5e.tar.gz
 release-location: https://bitbucket.org/galaxy/galaxy-dist/get/release_2013.01.13.tar.gz
 deps: python, qiime, qiime-galaxy
+
+[qcli]
+version: 1.7.0
+build-type: python-distutils
+repository-local-name: qcli
+repository-location: git://github.com/bipy/qcli.git
+repository-type: git
