--- a/qiime-1.7.0-dev/qiime.conf
+++ b/qiime-1.7.0-dev/qiime.conf
@@ -457,7 +457,7 @@ release-location: https://bitbucket.org/galaxy/galaxy-dist/get/release_2013.01.1
 deps: python, qiime, qiime-galaxy
 
 [qcli]
-version: 1.7.0
+version: 0.0.0-dev
 build-type: python-distutils
 repository-local-name: qcli
 repository-location: git://github.com/bipy/qcli.git
