added python as dependency

--- a/qiime-1.7.0-dev/qiime.conf
+++ b/qiime-1.7.0-dev/qiime.conf
@@ -462,3 +462,4 @@ build-type: python-distutils
 repository-local-name: qcli
 repository-location: git://github.com/bipy/qcli.git
 repository-type: git
+deps: python
