Added pysqlite for ipython functionality, including saved histories.

--- a/qiime-1.7.0-dev/qiime.conf
+++ b/qiime-1.7.0-dev/qiime.conf
@@ -463,3 +463,11 @@ repository-local-name: qcli
 repository-location: git://github.com/bipy/qcli.git
 repository-type: git
 deps: python
+
+[pysqlite]
+version: 2.0.17
+build-type: python-distutils
+release-file-name: pysqlite-2.6.3.tar.gz
+release-location: https://pysqlite.googlecode.com/files/pysqlite-2.6.3.tar.gz
+set-environment-variables-deploypath: PYTHONPATH=lib/
+deps: python
