--- a/qiime-1.7.0-dev/qiime.conf
+++ b/qiime-1.7.0-dev/qiime.conf
@@ -457,9 +457,9 @@ release-location: https://bitbucket.org/galaxy/galaxy-dist/get/release_2013.01.1
 deps: python, qiime, qiime-galaxy
 
 [qcli]
-version: 0.0.0-dev
+version: 0.1.0
 build-type: python-distutils
-repository-local-name: qcli
-repository-location: git://github.com/bipy/qcli.git
-repository-type: git
+release-file-name: qcli-0.1.0.tar.gz
+release-location: ftp://thebeast.colorado.edu/pub/qcli-releases/qcli-0.1.0.tar.gz
+relative-directory-add-to-path: bin
 deps: python
