Add pyqi 0.2.0 to biom-format conf

--- a/biom-format-1.1.2-dev/biom-format.conf
+++ b/biom-format-1.1.2-dev/biom-format.conf
@@ -48,12 +48,20 @@ repository-location: git://github.com/biom-format/biom-format.git
 repository-type: git
 relative-directory-add-to-path: bin
 copy-source-to-final-deploy: yes
-deps: python, cython, numpy
+deps: python, cython, numpy, pyqi
 
 [cython]
 version: 0.17
 build-type: python-distutils
 release-file-name: Cython-0.17.tar.gz
 release-location: http://cython.org/release/Cython-0.17.tar.gz
+relative-directory-add-to-path: bin
+deps: python
+
+[pyqi]
+version: 0.2.0
+build-type: python-distutils
+release-file-name: pyqi-0.2.0.tar.gz
+release-location: ftp://thebeast.colorado.edu/pub/pyqi-releases/pyqi-0.2.0.tar.gz
 relative-directory-add-to-path: bin
 deps: python
