--- a/biom-format-1.2.0/biom-format.conf
+++ b/biom-format-1.2.0/biom-format.conf
@@ -41,11 +41,10 @@ release-location: http://sourceforge.net/projects/numpy/files/NumPy/1.5.1/numpy-
 deps: python
 
 [biom-format]
-version: 1.1.2
+version: 1.2.0
 build-type: python-distutils
-repository-local-name: biom-format
-repository-location: git://github.com/biom-format/biom-format.git
-repository-type: git
+release-file-name: biom-format-1.2.0.tar.gz
+release-location: ftp://thebeast.colorado.edu/pub/biom-format-releases/biom-format-1.2.0.tar.gz
 relative-directory-add-to-path: bin
 copy-source-to-final-deploy: yes
 deps: python, cython, numpy, pyqi
