--- a/qiime-1.7.0-dev/qiime.conf
+++ b/qiime-1.7.0-dev/qiime.conf
@@ -318,12 +318,12 @@ relative-directory-add-to-path: bin
 deps: pycogent
 
 [biom-format]
-version: 1.1.2
+version: 1.2.0
 build-type: python-distutils
-release-file-name: biom-format-1.1.2.tar.gz
-release-location: ftp://thebeast.colorado.edu/pub/biom-format-releases/biom-format-1.1.2.tar.gz
+release-file-name: biom-format-1.2.0.tar.gz
+release-location: ftp://thebeast.colorado.edu/pub/biom-format-releases/biom-format-1.2.0.tar.gz
 relative-directory-add-to-path: bin
-deps: python, cython, numpy
+deps: python, cython, numpy, pyqi
 
 [rtax]
 version: 0.983
@@ -461,5 +461,13 @@ version: 0.1.0
 build-type: python-distutils
 release-file-name: qcli-0.1.0.tar.gz
 release-location: ftp://thebeast.colorado.edu/pub/qcli-releases/qcli-0.1.0.tar.gz
+relative-directory-add-to-path: bin
+deps: python
+
+[pyqi]
+version: 0.2.0
+build-type: python-distutils
+release-file-name: pyqi-0.2.0.tar.gz
+release-location: ftp://thebeast.colorado.edu/pub/pyqi-releases/pyqi-0.2.0.tar.gz
 relative-directory-add-to-path: bin
 deps: python
