Added scipy stack, updated R version

--- a/qiime-1.7.0-dev/qiime.conf
+++ b/qiime-1.7.0-dev/qiime.conf
@@ -40,7 +40,6 @@ release-location: ftp://greengenes.microbio.me/greengenes_release/gg_12_10/gg_12
 version: 2.7.3
 build-type: autoconf
 release-file-name: Python-2.7.3.tgz
-set-environment-variables-value: ATLAS=None,BLAS=None,LAPACK=None
 release-location: http://www.python.org/ftp/python/2.7.3/Python-2.7.3.tgz
 relative-directory-add-to-path: bin
 autoconf-make-options: -j4
@@ -99,12 +98,75 @@ release-location: https://github.com/downloads/qiime/pynast/PyNAST-1.2.tar.gz
 relative-directory-add-to-path: bin
 deps: pycogent
 
+[pcre]
+version: 8.21
+build-type: autoconf
+release-file-name: pcre-8.21.tar.gz
+release-location: http://sourceforge.net/projects/pcre/files/pcre/8.21/pcre-8.21.tar.gz
+set-environment-variables-deploypath: LD_LIBRARY_PATH=lib
+relative-directory-add-to-path: bin
+
+[swig]
+version: 2.0.10
+build-type: autoconf
+release-file-name: swig-2.0.10.tar.gz
+release-location: http://sourceforge.net/projects/swig/files/swig/swig-2.0.10/swig-2.0.10.tar.gz
+relative-directory-add-to-path: bin
+deps: pcre
+
+[blas]
+version: 9_13
+build-type: make
+release-file-name: qiime_blas.tgz
+release-location: ftp://thebeast.colorado.edu/pub/QIIME-v1.8.0-dependencies/qiime_blas.tgz
+unzipped-name: BLAS
+post-bash-commands: ln -s blas_LINUX.a libblas.a
+set-environment-variables-deploypath: LD_LIBRARY_PATH=./, BLAS=libblas.a
+
+[lapack]
+version: 3.4.2
+build-type: make
+release-file-name: qiime_lapack-3.4.2.tgz
+release-location: ftp://thebeast.colorado.edu/pub/QIIME-v1.8.0-dependencies/qiime_lapack-3.4.2.tgz
+unzipped-name: lapack-3.4.2
+set-environment-variables-deploypath: LAPACK=liblapack.a
+deps: blas
+
+[atlas]
+version: 3.8.4
+build-type: autoconf
+release-file-name: qiime_atlas3.8.4.tar.gz
+release-location: ftp://thebeast.colorado.edu/pub/QIIME-v1.8.0-dependencies/qiime_atlas3.8.4.tar.gz
+unzipped-name: ATLAS
+autoconf-configure-options: --with-netlib-lapack=$LAPACK -b 64 -Fa alg '-fPIC -m64'
+autoconf-make-options: -C build_dir
+autoconf-make-install-options: -C build_dir
+set-environment-variables-deploypath: LD_LIBRARY_PATH=lib, ATLAS=lib/libatlas.a
+deps: blas, lapack
+
+[suitesparse]
+version: 4.2.1
+build-type: autoconf
+release-file-name: qiime_SuiteSparse-4.2.1.tar.gz
+release-location: ftp://thebeast.colorado.edu/pub/QIIME-v1.8.0-dependencies/qiime_SuiteSparse-4.2.1.tar.gz
+unzipped-name: SuiteSparse
+set-environment-variables-deploypath: LD_LIBRARY_PATH=lib
+deps: blas, atlas
+
 [numpy]
-version: 1.5.1
+version: 1.7.1
 build-type: python-distutils
-release-file-name: numpy-1.5.1.tar.gz
-release-location: http://sourceforge.net/projects/numpy/files/NumPy/1.5.1/numpy-1.5.1.tar.gz
-deps: python
+release-file-name: qiime_numpy-1.7.1.tar.gz
+release-location: ftp://thebeast.colorado.edu/pub/QIIME-v1.8.0-dependencies/qiime_numpy-1.7.1.tar.gz
+unzipped-name: numpy-1.7.1
+deps: python, blas, lapack, suitesparse
+
+[scipy]
+version: 0.12.0
+build-type: python-distutils
+release-file-name: scipy-0.12.0.tar.gz
+release-location: http://sourceforge.net/projects/scipy/files/scipy/0.12.0/scipy-0.12.0.tar.gz
+deps: numpy, swig
 
 [matplotlib]
 version: 1.1.0
@@ -236,10 +298,10 @@ release-location: http://drive5.com/uclust/uclustq1.2.22_i86linux64
 relative-directory-add-to-path: .
 
 [r]
-version: 2.12.0
+version: 3.0.2
 build-type: autoconf
-release-file-name: R-2.12.0.tar.gz
-release-location: http://cran.case.edu/src/base/R-2/R-2.12.0.tar.gz
+release-file-name: R-3.0.2.tar.gz 
+release-location: http://cran.case.edu/src/base/R-3/R-3.0.2.tar.gz 
 relative-directory-add-to-path: bin
 autoconf-make-options: -j4
 
