Adding qiime dep for Emperor

--- a/qiime-1.7.0-dev/qiime.conf
+++ b/qiime-1.7.0-dev/qiime.conf
@@ -434,7 +434,7 @@ build-type: python-distutils
 release-file-name: emperor-0.9.1.tar.gz
 release-location: ftp://thebeast.colorado.edu/pub/emperor-releases/emperor-0.9.1.tar.gz
 relative-directory-add-to-path: bin
-deps: python
+deps: qiime
 
 [qiime-galaxy]
 version: 0.0.1
