The deploy scripts don't like '#' in the filenames in cloud storage, so I've striped them off

--- a/qiime-1.6.0/qiime.conf
+++ b/qiime-1.6.0/qiime.conf
@@ -130,7 +130,7 @@ deps: python
 version: 1.0.4
 build-type: python-distutils
 release-file-name: Sphinx-1.0.4.tar.gz
-release-location: https://swift.rc.nectar.org.au:8888/v1/AUTH_33065ff5c34a4652aa2fefb292b3195a/qiime/Sphinx-1.0.4.tar.gz#md5=d4067e42e75525ecf108ece471ce97bb
+release-location: https://swift.rc.nectar.org.au:8888/v1/AUTH_33065ff5c34a4652aa2fefb292b3195a/qiime/Sphinx-1.0.4.tar.gz
 deps: python, setuptools
 
 [raxml]
@@ -376,7 +376,7 @@ deps: python
 version: 2.1.9
 build-type: python-distutils
 release-file-name: pyzmq-2.1.9.tar.gz
-release-location: https://swift.rc.nectar.org.au:8888/v1/AUTH_33065ff5c34a4652aa2fefb292b3195a/qiime/pyzmq-2.1.9.tar.gz#md5=44efd9e7dd041b9f779e3026d189f870
+release-location: https://swift.rc.nectar.org.au:8888/v1/AUTH_33065ff5c34a4652aa2fefb292b3195a/qiime/pyzmq-2.1.9.tar.gz
 relative-directory-add-to-path: bin
 deps: python
 
