--- a/qiime-1.7.0/qiime.conf
+++ b/qiime-1.7.0/qiime.conf
@@ -123,7 +123,7 @@ deps: python
 version: 1.0.4
 build-type: python-distutils
 release-file-name: Sphinx-1.0.4.tar.gz
-release-location: https://swift.rc.nectar.org.au:8888/v1/AUTH_33065ff5c34a4652aa2fefb292b3195a/qiime/Sphinx-1.0.4.tar.gz#md5=d4067e42e75525ecf108ece471ce97bb
+release-location: https://swift.rc.nectar.org.au:8888/v1/AUTH_33065ff5c34a4652aa2fefb292b3195a/qiime/Sphinx-1.0.4.tar.gz
 deps: python, setuptools
 
 [raxml]
