updated pynast version

--- a/qiime-1.7.0-dev/qiime.conf
+++ b/qiime-1.7.0-dev/qiime.conf
@@ -92,10 +92,10 @@ deps: numpy
 set-environment-variables-deploypath: PYCOGENT=./
 
 [pynast]
-version: 1.2
+version: 1.2.1
 build-type: python-distutils
 release-file-name: PyNAST-1.2.tar.gz
-release-location: https://github.com/downloads/qiime/pynast/PyNAST-1.2.tar.gz
+release-location: ftp://thebeast.colorado.edu/pub/pynast-releases/pynast-1.2.1.tar.gz
 relative-directory-add-to-path: bin
 deps: pycogent
 
