--- a/qiime-1.7.0-dev/qiime.conf
+++ b/qiime-1.7.0-dev/qiime.conf
@@ -94,7 +94,7 @@ set-environment-variables-deploypath: PYCOGENT=./
 [pynast]
 version: 1.2.1
 build-type: python-distutils
-release-file-name: PyNAST-1.2.tar.gz
+release-file-name: pynast-1.2.1.tar.gz
 release-location: ftp://thebeast.colorado.edu/pub/pynast-releases/pynast-1.2.1.tar.gz
 relative-directory-add-to-path: bin
 deps: pycogent
