added paired end assembler apps

--- a/qiime-1.7.0-dev/qiime.conf
+++ b/qiime-1.7.0-dev/qiime.conf
@@ -476,3 +476,18 @@ release-file-name: pysqlite-2.6.3.tar.gz
 release-location: ftp://thebeast.colorado.edu/pub/QIIME-v1.8.0-dependencies/pysqlite-2.6.3.tar.gz
 set-environment-variables-deploypath: PYTHONPATH=lib/
 deps: python
+
+[ea-utils]
+version: 1.1.2-537
+build-type: make
+release-file-name: ea-utils.1.1.2-537.tar.gz
+release-location: https://ea-utils.googlecode.com/files/ea-utils.1.1.2-537.tar.gz
+relative-directory-add-to-path: .
+
+[SeqPrep]
+version: latest
+build-type: make
+repository-local-name: SeqPrep
+repository-location: git://github.com/jstjohn/SeqPrep.git
+relative-directory-add-to-path: .
+repository-type: git
