Fix seqprep target

--- a/qiime-1.7.0-dev/qiime.conf
+++ b/qiime-1.7.0-dev/qiime.conf
@@ -487,6 +487,9 @@ relative-directory-add-to-path: .
 [SeqPrep]
 version: latest
 build-type: make
+# These CFLAGS are the same as what's in the makefile, minus -Werror, which was
+# making the build fail on any warnings.
+make-options: CFLAGS='-c -Wall -O0 -g'
 repository-local-name: SeqPrep
 repository-location: git://github.com/jstjohn/SeqPrep.git
 relative-directory-add-to-path: .
