Remove extraneous README.md files
Also update biom-format 1.2.0-dev to depend on pyqi 0.3.1.

--- a/biom-format-1.2.0-dev/biom-format.conf
+++ b/biom-format-1.2.0-dev/biom-format.conf
@@ -51,9 +51,9 @@ copy-source-to-final-deploy: yes
 deps: python, numpy, pyqi
 
 [pyqi]
-version: 0.2.0
+version: 0.3.1
 build-type: python-distutils
-release-file-name: pyqi-0.2.0.tar.gz
-release-location: ftp://thebeast.colorado.edu/pub/pyqi-releases/pyqi-0.2.0.tar.gz
+release-file-name: pyqi-0.3.1.tar.gz
+release-location: https://pypi.python.org/packages/source/p/pyqi/pyqi-0.3.1.tar.gz
 relative-directory-add-to-path: bin
 deps: python
