Add setuptools target to biom-format conf

--- a/biom-format-1.2.0-dev/biom-format.conf
+++ b/biom-format-1.2.0-dev/biom-format.conf
@@ -33,6 +33,13 @@ autoconf-make-options: -j4
 autoconf-configure-options: --enable-shared --enable-unicode=ucs2 --enable-unicode=ucs4
 set-environment-variables-deploypath: LD_LIBRARY_PATH=lib
 
+[setuptools]
+version: 0.6c11
+build-type: python-distutils
+release-file-name: setuptools-0.6c11.tar.gz
+release-location: http://pypi.python.org/packages/source/s/setuptools/setuptools-0.6c11.tar.gz
+deps: python
+
 [numpy]
 version: 1.5.1
 build-type: python-distutils
@@ -56,4 +63,4 @@ build-type: python-distutils
 release-file-name: pyqi-0.3.1.tar.gz
 release-location: https://pypi.python.org/packages/source/p/pyqi/pyqi-0.3.1.tar.gz
 relative-directory-add-to-path: bin
-deps: python
+deps: python, setuptools
