Update for biom-format 1.3.1, 1.3.1-dev
Also update QIIME to use biom-format 1.3.1.

--- a/qiime-1.7.0-dev/qiime.conf
+++ b/qiime-1.7.0-dev/qiime.conf
@@ -47,14 +47,6 @@ autoconf-make-options: -j4
 autoconf-configure-options: --enable-shared --enable-unicode=ucs2 --enable-unicode=ucs4
 set-environment-variables-deploypath: LD_LIBRARY_PATH=lib
 
-[cython]
-version: 0.17
-build-type: python-distutils
-release-file-name: Cython-0.17.tar.gz
-release-location: http://cython.org/release/Cython-0.17.tar.gz
-relative-directory-add-to-path: bin
-deps: python
-
 [qiime]
 version: 1.7.0
 build-type: python-distutils
@@ -318,12 +310,12 @@ relative-directory-add-to-path: bin
 deps: pycogent
 
 [biom-format]
-version: 1.2.0
+version: 1.3.1
 build-type: python-distutils
-release-file-name: biom-format-1.2.0.tar.gz
-release-location: ftp://thebeast.colorado.edu/pub/biom-format-releases/biom-format-1.2.0.tar.gz
+release-file-name: biom-format-1.3.1.tar.gz
+release-location: https://pypi.python.org/packages/source/b/biom-format/biom-format-1.3.1.tar.gz
 relative-directory-add-to-path: bin
-deps: python, cython, numpy, pyqi
+deps: python, numpy, pyqi
 
 [rtax]
 version: 0.984
@@ -462,12 +454,12 @@ relative-directory-add-to-path: bin
 deps: python
 
 [pyqi]
-version: 0.2.0
+version: 0.3.1
 build-type: python-distutils
-release-file-name: pyqi-0.2.0.tar.gz
-release-location: ftp://thebeast.colorado.edu/pub/pyqi-releases/pyqi-0.2.0.tar.gz
+release-file-name: pyqi-0.3.1.tar.gz
+release-location: https://pypi.python.org/packages/source/p/pyqi/pyqi-0.3.1.tar.gz
 relative-directory-add-to-path: bin
-deps: python
+deps: python, setuptools
 
 [pysqlite]
 version: 2.6.3
