Update emperor target to 0.9.3

--- a/qiime-1.7.0-dev/qiime.conf
+++ b/qiime-1.7.0-dev/qiime.conf
@@ -421,12 +421,12 @@ release-location: http://gdata-python-client.googlecode.com/files/gdata-2.0.17.t
 deps: python
 
 [emperor]
-version: 0.9.2
+version: 0.9.3
 build-type: python-distutils
-release-file-name: emperor-0.9.2.tar.gz
-release-location: ftp://thebeast.colorado.edu/pub/emperor-releases/emperor-0.9.2.tar.gz
+release-file-name: emperor-0.9.3.tar.gz
+release-location: https://pypi.python.org/packages/source/e/emperor/emperor-0.9.3.tar.gz
 relative-directory-add-to-path: bin
-deps: qiime
+deps: numpy, qcli, setuptools
 
 [qiime-galaxy]
 version: 0.0.1
