update to pynast 1.2.2

--- a/qiime-1.7.0-dev/qiime.conf
+++ b/qiime-1.7.0-dev/qiime.conf
@@ -84,10 +84,10 @@ deps: numpy
 set-environment-variables-deploypath: PYCOGENT=./
 
 [pynast]
-version: 1.2.1
+version: 1.2.2
 build-type: python-distutils
-release-file-name: pynast-1.2.1.tar.gz
-release-location: ftp://thebeast.colorado.edu/pub/pynast-releases/pynast-1.2.1.tar.gz
+release-file-name: pynast-1.2.2.tar.gz
+release-location: https://pypi.python.org/packages/source/p/pynast/pynast-1.2.2.tar.gz
 relative-directory-add-to-path: bin
 deps: pycogent
 
