Adding files for 1.8.0

--- a/qiime-1.8.0/qiime.conf
+++ b/qiime-1.8.0/qiime.conf
@@ -48,11 +48,10 @@ autoconf-configure-options: --enable-shared --enable-unicode=ucs2 --enable-unico
 set-environment-variables-deploypath: LD_LIBRARY_PATH=lib
 
 [qiime]
-version: 1.7.0
+version: 1.8.0
 build-type: python-distutils
-repository-local-name: qiime
-repository-location: git://github.com/qiime/qiime.git
-repository-type: git
+release-file-name: qiime-1.8.0.tar.gz
+release-location: ftp://thebeast.colorado.edu/pub/qiime-releases/qiime-1.8.0.tar.gz
 relative-directory-add-to-path: bin
 copy-source-to-final-deploy: yes
 deps: pycogent, matplotlib
@@ -351,10 +350,10 @@ release-location: https://github.com/MG-RAST/DRISEE/zipball/v1.2
 relative-directory-add-to-path: .
 
 [tornado]
-version: 2.2.1
+version: 3.1.1
 build-type: python-distutils
-release-file-name: tornado-2.2.1.tar.gz
-release-location: http://github.com/downloads/facebook/tornado/tornado-2.2.1.tar.gz
+release-file-name: tornado-3.1.1.tar.gz
+release-location: https://github.com/facebook/tornado/archive/v3.1.1.tar.gz
 relative-directory-add-to-path: bin
 deps: python
 
