--- a/qiime-1.8.0/qiime.conf
+++ b/qiime-1.8.0/qiime.conf
@@ -51,7 +51,7 @@ set-environment-variables-deploypath: LD_LIBRARY_PATH=lib
 version: 1.8.0
 build-type: python-distutils
 release-file-name: qiime-1.8.0.tar.gz
-release-location: ftp://thebeast.colorado.edu/pub/qiime-releases/qiime-1.8.0.tar.gz
+release-location: https://pypi.python.org/packages/source/q/qiime/qiime-1.8.0.tar.gz
 relative-directory-add-to-path: bin
 copy-source-to-final-deploy: yes
 deps: pycogent, matplotlib
