Add bipy dependency to qiime-dev conf

--- a/qiime-dev/qiime.conf
+++ b/qiime-dev/qiime.conf
@@ -40,7 +40,6 @@ release-location: ftp://greengenes.microbio.me/greengenes_release/gg_13_5/gg_13_
 version: 2.7.3
 build-type: autoconf
 release-file-name: Python-2.7.3.tgz
-set-environment-variables-value: ATLAS=None,BLAS=None,LAPACK=None
 release-location: http://www.python.org/ftp/python/2.7.3/Python-2.7.3.tgz
 relative-directory-add-to-path: bin
 autoconf-make-options: -j4
@@ -55,7 +54,7 @@ repository-location: git://github.com/qiime/qiime.git
 repository-type: git
 relative-directory-add-to-path: bin
 copy-source-to-final-deploy: yes
-deps: pycogent, matplotlib
+deps: pycogent, matplotlib, bipy
 set-environment-variables-deploypath: QIIME=./,QIIME_CONFIG_FP=../qiime_config,PYTHONPATH=lib/
 python-install-options: --install-scripts=bin/ --install-purelib=lib/
 
@@ -486,3 +485,18 @@ repository-local-name: SeqPrep
 repository-location: git://github.com/jstjohn/SeqPrep.git
 relative-directory-add-to-path: .
 repository-type: git
+
+[scipy]
+version: 0.13.0
+build-type: python-distutils
+release-file-name: scipy-0.13.0.tar.gz
+release-location: http://sourceforge.net/projects/scipy/files/scipy/0.13.0/scipy-0.13.0.tar.gz
+deps: numpy
+
+[bipy]
+version: latest
+build-type: python-distutils
+repository-local-name: bipy
+repository-location: git://github.com/biocore/bipy.git
+repository-type: git
+deps: matplotlib, scipy
