Add --without-x option to R target
Fixes #95.

--- a/qiime-dev/qiime.conf
+++ b/qiime-dev/qiime.conf
@@ -233,6 +233,7 @@ build-type: autoconf
 release-file-name: R-3.0.2.tar.gz
 release-location: http://cran.case.edu/src/base/R-3/R-3.0.2.tar.gz
 relative-directory-add-to-path: bin
+autoconf-configure-options: --without-x
 autoconf-make-options: -j4
 
 [random-forest]
