--- a/picrust-dev/picrust.conf
+++ b/picrust-dev/picrust.conf
@@ -82,6 +82,7 @@ build-type: autoconf
 release-file-name: R-2.12.0.tar.gz
 release-location: http://cran.case.edu/src/base/R-2/R-2.12.0.tar.gz
 relative-directory-add-to-path: bin
+autoconf-configure-options: --without-x
 autoconf-make-options: -j4
 
 [ape]
